--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,5 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  margin-top: 10rem;
 }
