--- a/src/components/Autocomplete/autocomplete.css
+++ b/src/components/Autocomplete/autocomplete.css
@@ -7,8 +7,13 @@
 }
 
 .product-list .product-item {
-  margin: 10px 0;
+  padding: 10px 0;
   font-size: 15px;
+  cursor: pointer;
+}
+
+.product-item:hover {
+  background-color: aliceblue;
 }
 
 .products-loader {
@@ -18,4 +23,8 @@
 .products-error {
   margin: 15px 5px;
   color: rgb(189, 30, 30);
+}
+
+.highlight {
+  background-color: rgb(240, 240, 120);
 }
